     output and makes it closer to the original.

 Broken Sword 1:
   - Fix speech endianness detection on big endian systems for the Macintosh
     version (bug #6720).
   - Fix crash when reloading a game from the Main Menu while in the bull's
     head scene (bug #6728). It may have been happening in other scenes as
     well.

 MADE:
   - Improved AdLib music support in Return to Zork.

 SAGA:
   - Improved AdLib music support.

 SCI:
   - Handling of music priority has been greatly improved.
   - A lot of fixes for original game script bugs that also occurred when
     using the original interpreter.
     KQ6 (Dual Mode), LSL5, QfG1 (EGA), QfG1 (VGA), QfG2, QfG3, SQ1, SQ4 (CD)
   - Restoring from the ScummVM in-game menu should now work all the time.
   - Improve support for Japanese PC-9801 games.

 SCUMM:
   - It is now possible to play Maniac Mansion from within Day of the
     Tentacle, with a few caveats. See README for details.

 Tinsel:
   - Improved AdLib music support in Discworld 1.

1.7.0 (2014-07-21)
 New Games:
   - Added support for Chivalry is Not Dead.
   - Added support for Return to Ringworld.
   - Added support for The Neverhood.
   - Added support for Mortville Manor.
   - Added support for Voyeur.

 General:
   - Updated Munt MT-32 emulation code to version 1.3.0.
   - Switched from our custom JPEG and PNG decoders to libjpeg(-turbo) and
     libpng, which are faster and can handle more images.
     (NOTE: The change to libpng was done in version 1.6.0, but it was not
     added to the NEWS file).
   - Added generic OpenGL (ES) output (based on GSoC Task).
   - The GUI can now be rendered in 32-bits.
   - The build system has been changed to be more modular and easier to add new
     engines.

 SDL:
   - Added OpenGL graphics mode based on our generic OpenGL output. This
     allows for arbitrary output sizes. However, it does not support special
     filters like AdvMAME, HQ, etc.

 AGOS: