@@ -48,6 +48,7 @@ public:
 
 	virtual void playSound(int channel, int frequency, const uint8 *data, int size, int volumeStep, int stepCount, int volume, int repeat) = 0;
 	virtual void stopSound(int channel) = 0;
+	virtual void setBgMusic(int num) = 0;
 
 protected:
 
@@ -71,11 +72,14 @@ public:
 
 	virtual void playSound(int channel, int frequency, const uint8 *data, int size, int volumeStep, int stepCount, int volume, int repeat);
 	virtual void stopSound(int channel);
+	virtual void setBgMusic(int num);
 
 protected:
 
 	PCSoundDriver *_soundDriver;
 	PCSoundFxPlayer *_player;
+
+	uint8 _currentMusic, _currentMusicStatus, _currentBgSlot;
 };
 
 class PaulaSound : public Sound {
@@ -91,6 +95,7 @@ public:
 
 	virtual void playSound(int channel, int frequency, const uint8 *data, int size, int volumeStep, int stepCount, int volume, int repeat);
 	virtual void stopSound(int channel);
+	virtual void setBgMusic(int num);
 
 	enum {
 		PAULA_FREQ = 3579545,
